Improved text contrast through contrast checker. Fixing css structure.

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,28 @@
+/* General styling */
+
 body {
     margin: 0;
     background-color: #F2EBDC;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #c853ff;
+    color: #5B0085;
+    text-shadow: 0px 0px 2px white;
 
     text-align: center;
 
     border: 2px dashed #c853ff;
 }
+
+/* Top-to-bottom styling /*
+
+/* header */
+
+.header {
+    margin-top: 0;
+    background-image: url(./assets/minions.gif);
+
+    color: #c853ff;
+}
+
 
 h1 {
     margin-top: 0;
@@ -25,10 +40,6 @@ p {
     font-weight: 900;
 }
 
-.hero {
-    margin-top: 0;
-    background-image: url(./assets/minions.gif);
-}
 
 #main-img {
     padding: 5px;
@@ -40,6 +51,8 @@ p {
     border-radius: 50%;
 }
 
+/* Interactive part styling */
+
 .quiz:hover span {
     display: none;
 }
@@ -49,12 +62,13 @@ p {
     border: 2px solid red;
     background-color: antiquewhite;
     content: "ДАШИН!!!!!🎊🎊🎊🎊🎊";
-    text-shadow: 0px 0px 6px rgb(255, 0, 0);
+    text-shadow: 0px 0px 5px rgb(255, 255, 255);
 
 }
 
 
-/* Sections Styling */
+/* Gift-Sections styling */
+
 .gift-section {
     margin: 60px 0px;
 }
